app/assets/stylesheets/_hearings.scss
@import 'uswds/lib/addons/font-stacks';
@import 'uswds/core/variables';

// variables here should eventually find their way into commons
@import 'variables';

$color-hearings-saving: $color-gray;

.worksheet-header {
  .question-label {
    margin-bottom: 4px;
  }

  .cf-push-right {
    padding-top: 25px;
  }
}

.hearings {
  thead > tr {
    display: inline-table;
    width: 100%;

    th:nth-child(3) {
      min-width: 75px;
    }

    th {
      max-width: 165px;
      min-width: 155px;
    }
  }

  tbody > tr {
    display: inline-table;
    width: 100%;

    td:nth-child(3) {
      min-width: 75px;
    }

    td {
      max-width: 165px;
      min-width: 150px;
    }
  }
}

.saving {
  font-style: italic;
  color: $color-hearings-saving;
  text-align: right;
  display: block;
  margin-bottom: 10px;
  margin-top: 10px;
  font-size: 15px;
  font-weight: bold;
}

.cf-hearings-daily-docket-container {
  position: relative;
}

.cf-hearings-schedule {
  .cf-tab {
    span {
      min-width: 150px;
    }
  }

  h1 {
    padding-bottom: 0;
  }

}

.cf-hearings,
.cf-hearings-schedule,
.cf-hearings-worksheet {
  padding: $cf-30px;

  .cf-hearings-title-and-judge {
    h1 {
      margin-bottom: 0;
    }

    span {
      position: relative;
      left: .25em;
    }
  }

  .dockets {
    td {
      text-transform: capitalize;
    }

    td:nth-child(2) {
      text-transform: none;
    }
  }

  .cf-title-meta-right {
    line-height: 2em;

    .meta {
      font-size: inherit;
    }
  }

  .cf-hearings-docket {
    margin-top: 0;

    // TODO: see if this can become a part of the general style
    .Select-arrow-zone {
      background-position: center;
      background-size: .75em;
    }

    // TODO: see if this can become a part of the general style
    .Select-menu-outer {
      border: 1px solid $color-gray-medium;
      border-top: none;
      min-height: auto;
      box-shadow: 0 2px 4px 0 $color-dropdown-shadow;
    }

    // TODO: see if this can become a part of the general style
    .is-searchable.is-open > .Select-control {
      box-shadow: 0 0 8px $color-dropdown-shadow;
    }

    tbody {
      border-bottom: 1px solid $color-gray-lighter;
    }

    td {
      vertical-align: top;
      margin: 0;
      border: none;
      padding: .75em 0.75em .75em .25em;

      &:first-child {
        font-weight: bold;
        padding-right: 0;
        padding-left: 0;
        float: right;
      }
    }

    th {
      vertical-align: middle;
      background: none;
      border: none;
      border-bottom: 1px solid $color-gray-lighter;
      margin: 0;
      padding: .75em 0.75em .75em .25em;

      &:last-child {
        padding-right: 0;
      }
    }

    .cf-hearings-docket-date {
      width: 14%;

      > span {
        display: inline-block;
        vertical-align: top;

        &:first-child {
          padding-bottom: 5px;
        }

        &:last-child {
          display: block;
        }
      }
    }

    .cf-hearings-prepped {
      width: 3%;

      .cf-form-checkboxes {
        margin-top: 0;
        padding-left: 4px;
      }
    }

    .cf-hearings-docket-appellant {
      width: 20%;

      b {
        display: block;
      }
    }

    .cf-hearings-docket-notes {
      padding-top: 0;

      .cf-form-textarea {
        margin-bottom: 0;
      }

      label {
        position: absolute;
        display: inline-block;
        vertical-align: top;
        width: 3em;

        div {
          padding-left: 3em;
       }
      }

      textarea {
        padding-top: 0;
        padding-bottom: 0;
        height: 4em;
        min-height: 4em;
        resize: vertical;
        margin-left: 3em;
        width: 84%;
      }
    }

    .cf-hearings-docket-actions {
      width: 45%;
      text-align: center;
      background-color: $color-gray-lightest;

      .cf-form-dropdown {
        text-align: left;
        display: inline-block;
        width: 33%;
        margin: 0;
        padding: 0 .32em;
      }
    }
  }

  .transcriptRequested {
    display: inline-block;
    text-align: left;
    padding: 1.5em .32em;
    width: 100%;

    .cf-form-checkboxes {
      margin-bottom: 0;
      margin-top: 0 !important;
    }

    .cf-form-checkbox {
      margin-top: 32px;
    }
  }
}

.loading-hearings {
  margin: 100px auto 0;
  text-align: center;
}

.cf-hearings-worksheet {
  margin-bottom: 15px;

  [type="text"] {
    margin: .3em 0 0;
  }

  .cf-form-textarea {
    max-width: 100%;

    textarea {
      margin: 0;
      width: 100%;
      resize: vertical;
      min-height: 48px;
    }
  }

  [type="text"],
  textarea {
    border: 1px solid $color-gray-medium;
  }

  //TODO: Candidate for caseflow-commons
  .cf-copy-to-clipboard {
    border: 1px solid $color-gray-medium;
    box-shadow: inset 0 0 0 1px $color-gray-lightest;
    color: $color-gray;

    &:hover {
      background: $color-gray-medium;
      border: 1px solid $color-gray-medium;
      box-shadow: none;
      color: $color-white;

      path {
        fill: $color-white;
      }
    }

    &:focus {
      box-shadow: none;
    }

    svg {
      margin: 0 0 -2px 7px;
    }
  }

  .cf-hearings-worksheet-witness-cell {

    textarea {
      height: 44px;
      min-height: 44px;
      min-width: 100%;
    }
  }

  table {
    margin: .5em 0 0;
  }
}

.cf-hearings-worksheet-data {
  position: relative;
  margin-bottom: 1.765em;

  &:last-child {
    margin-bottom: 0;
  }

  label {
    font-size: 1.05em;
    padding-bottom: .3em;
  }

  h4 {
    font-weight: normal;
    margin-top: 27px;
    font-size: 17px;
  }

  textarea {
    resize: vertical;
  }


  .cf-hearings-worksheet-header {
    margin-bottom: 1em;
  }

  .cf-modal {

    h2 {
      border-bottom: none;
      font-size: 1.5em;
    }

  }

  .cf-hearings-worksheet-data-cell {
    display: inline-block;
    width: 20%;
    margin-top: 1em;
    vertical-align: top;
    padding-left: .2em;

    &.column-1 {
      padding-left: 0;
    }

    &.column-2 {
      width: 18%;
    }

    &.column-4 {
      width: 21%;
    }

    &.column-5 {
      width: 21%;
    }

  }

  .cf-appeal-stream-label {
    margin-top: .5em;
    margin-bottom: 0;
  }

  .cf-issue-delete {
    cursor: pointer;
  }

  h2 {
    border-bottom: 1px solid $color-gray-lighter;
    margin-bottom: .5em;
  }
}

.cf-hearings-worksheet-issues {
  margin: 0;
  white-space: pre-line;

  .cf-form-textarea {
    min-height: 48px;

    .question-label {
      position: absolute;
      left: -99999px;
    }
  }

  .cf-txt-l {
    padding-left: .4em;

    [id=trash-can] {
      margin-top: 20px;
    }
  }

  tr {
    border: none;

    th {
      padding: 0;
    }
  }

  td {
    vertical-align: top;
    padding: .5em;

    &:nth-of-type(1) {
      width: 5%;
    }

    &:nth-of-type(2) {
      width: 26%;
    }

    &:nth-of-type(3) {
      width: 26%;
    }

    &:nth-of-type(4) {
      width: 13%;
    }

    &:nth-of-type(5) {
      width: 26%;
    }

    &:nth-of-type(6) {
      width: 4%;
    }

    textarea {
      height: 4em;
    }

    .cf-form-checkboxes {
      display: inline-block;
      box-sizing: border-box;
      margin: 0;
      padding: .3em 0;

      &:nth-of-type(1),
      &:nth-of-type(4) {
        width: 40%;
      }

      &:nth-of-type(2),
      &:nth-of-type(5) {
        width: 35%;
      }

      &:nth-of-type(3),
      &:nth-of-type(6) {
        width: 25%;
      }

      label {
        margin: 0;
        white-space: nowrap;
      }
    }
  }
}

.cf-hearings-worksheet-form {
  label {
    font-weight: bold;
  }
}


.cf-hearings-print-appeal-stream {
  line-height: .2em;
  font-size: 11px;
  margin-bottom: 0;
}

.cf_hearing_body {
  font-size: 11px;
}

.hearings-add-issue {
  margin-bottom: 20px;
}

.cf-hearings-worksheet-desc-label {
  position: absolute;
  left: -99999px;
}

.cf-hearings-print-worksheet-header {
  font-size: 11px;
}

.cf-form-textinput {
  label {
    padding-bottom: 0;
    margin-bottom: 0;
  }

  p {
    font-size: 11px;
    margin-top: 0;
  }
}

@media print {
  body {-webkit-print-color-adjust: exact;}
  h1,
  h2,
  h3 {
    font-family: sans-serif;
    font-size: 11px;
  }

  .cf-hearings-worksheet-issues {
    td {
      padding: 0 .5em;
    }

    textarea {
      border: none;
      font-size: 11px;
      padding: 0;
      resize: none !important;
      overflow: auto;
      height: 0;
  }

    tr {
      border-bottom: 1px solid $color-gray-lighter;
  }

}

  .cf-help-divider {
    display: none;
 }

  .cf-hearings-divider {
    border-bottom: 1px solid $color-gray-lighter;
  }

  .cf-tab-navigation {
    border-bottom: none;
    margin-top: 0;
 }

  .cf-tab {
    border: none;
    background: $color-white;
    padding: 0;
    color: $color-gray;
    line-height: normal;
    font-weight: 500;
    font-size: 1.1rem;
 }

  .cf-active {
    color: $color-primary;
    font-weight: 700;
    border: none;
 }

  .cf-active + .cf-tab {
    border-left: none;
 }

  .cf-active > span {
    top: 1px;
    display: initial;
    box-shadow: 0 0 0 $color-white inset;
  }

  .usa-button,
  .usa-button-primary,
  .usa-button:visited,
  .usa-button-primary:visited,
   button,
   [type="button"],
   [type="submit"],
   [type="reset"],
   [type="image"] {
    width: auto;
 }

  .cf-hearings-worksheet {
    table {
      margin: 1em 0 0;

   }
}

  .cf-hearings-worksheet-issues .cf-form-textarea {
    min-height: 0;
 }

  .cf-hearings-worksheet-data {
    white-space: pre-line;
    margin-bottom: 0;

    p {
      font-size: 11px;
    }

    h4 {
      font-size: 11px;
      margin-top: 0;
    }

 }

  .cf-tab-window-body-full-screen {
    margin-top: -35px;
 }

  .cf-hearings-worksheet-data .cf-hearings-worksheet-data-first-cell {
    margin-top: .2em;
 }

  .cf-hearings-worksheet-data .cf-hearings-worksheet-data-second-cell {
    margin-top: 0;
}

  .cf-title-meta-right {
    margin-bottom: .5em;
 }

  .cf-print-page-break {
    break-after: page;
  }

  body {
    counter-reset: page pages;
 }

  .cf-print-number {
    counter-reset: pages 1;
    counter-increment: pages;
}

  .cf-print-number::before {
    counter-increment: page;
    content: 'Page ' counter(page) ' of ' counter(pages);
    margin-left: 5px;
  }

  .cf-hearings-first-page {
    display: flex;
    flex-direction: column;

    .cf-print-footer {
      position: absolute;
      bottom: 25px;
      right: 30px;
     }
  }

  .cf-hearings-worksheet {
    margin-bottom: 0;
    padding-bottom: 0;

    .cf-hearings-second-page {
      min-height: 11in;
      display: flex;
      flex-direction: column;
      padding: 2em;


      .cf-hearings-worksheet-form {
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;

        .cf-hearings-worksheet-data:last-child {
          margin-bottom: inherit;
        }
      }
    }
  }
}

@page {
  size: 8.5in 11in;
  margin: 0;
}

